package NYT.NHiveClient.NProto;

option python_package = "yt_proto.yt.client.hive.proto";

////////////////////////////////////////////////////////////////////////////////

message TClusterDirectory
{
    message TItem
    {
        required string name = 1;
        required bytes config = 2;
    }

    repeated TItem items = 1;
}

////////////////////////////////////////////////////////////////////////////////
